aws/2018-basic/lab1-vpc.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: '2018 course lab 1 , VPC + One Subnet + EC2'

# enviromnet
Parameters:
  KeyPair:
    Type: String
    Description: 'The EC2 KeyPair'
    Default: ''

Resources:
  ##### network #####

  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: 'default'
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-vpc'


  VPCDHCPOptions:
    Type: "AWS::EC2::DHCPOptions"
    Properties:
      DomainName: !Sub '${AWS::Region}.compute.internal'
      DomainNameServers:
      - 'AmazonProvidedDNS'
      NtpServers:
      - '169.254.169.123'
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-vpc-dhcp-options'


  VPCDHCPOptionsAssociation:
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    Properties:
      DhcpOptionsId: !Ref VPCDHCPOptions
      VpcId: !Ref VPC


  PublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [ '0', !GetAZs { Ref: 'AWS::Region' } ]
      CidrBlock: '172.16.10.0/24'
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-public-a'
      VpcId: !Ref 'VPC'


  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-igw'


  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'VPC'


  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-public-rt'
      VpcId: !Ref 'VPC'


  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
      RouteTableId: !Ref 'PublicRouteTable'


  PublicSubnetARouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      SubnetId: !Ref 'PublicSubnetA'



  ##### ec2 & ssh security group #####
  SSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'SSHSecurityGroup'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Sub '0.0.0.0/0'
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-ssh'
      VpcId: !Ref VPC


  EC2:
    Type: "AWS::EC2::Instance"
    Properties:
      AvailabilityZone: !Select [ '0', !GetAZs { Ref: 'AWS::Region' } ]
      EbsOptimized: false
      ImageId: 'ami-08847abae18baa040'
      InstanceInitiatedShutdownBehavior: 'terminate'
      InstanceType: 't2.micro'
      KeyName: !Sub '${KeyPair}'
      Monitoring: true
      NetworkInterfaces:
      - AssociatePublicIpAddress: "true"
        DeviceIndex: "0"
        GroupSet:
        - Ref: SSHSecurityGroup
        SubnetId: !Ref PublicSubnetA
        DeleteOnTermination: true
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-demo-ec2'
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash -x
          sudo yum update -y


Outputs:
  EC2PublicIp:
    Value: !GetAtt EC2.PublicIp
    Export:
      Name: !Sub '${AWS::StackName}-EC2-PublicIp'
